# omp-capi

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build.yml
apidocs/: api.json  events.json
docker/: build.sh
docker/build_ubuntu-18.04/: Dockerfile  docker-entrypoint.sh
include/: ompcapi.h  types.h
src/: main.cpp
src/Impl/: ComponentManager.cpp  ComponentManager.hpp
src/Impl/Actors/: APIs.cpp  Events.hpp
src/Impl/Checkpoints/: APIs.cpp  Events.hpp
src/Impl/Classes/: APIs.cpp  Events.hpp
src/Impl/Component/: APIs.cpp
src/Impl/Console/: Events.hpp
src/Impl/Core/: APIs.cpp  Events.hpp
src/Impl/CustomModels/: APIs.cpp  Events.hpp
src/Impl/Dialogs/: APIs.cpp  Events.hpp
src/Impl/Events/: APIs.cpp
src/Impl/GangZones/: APIs.cpp  Events.hpp
src/Impl/Menus/: APIs.cpp  Events.hpp
src/Impl/Objects/: APIs.cpp  Events.hpp
src/Impl/Pickups/: APIs.cpp  Events.hpp
src/Impl/Players/: APIs.cpp  Events.hpp
src/Impl/Recording/: APIs.cpp
src/Impl/TextDraws/: APIs.cpp  Events.hpp
src/Impl/TextLabels/: APIs.cpp
src/Impl/Vehicles/: APIs.cpp  Events.hpp
src/Utils/: MacroMagic.hpp  Singleton.hpp
tools/: generate_docs.js  generate_single_header.js
